# Test-task

./: pyproject.toml  readme.md  solution.ipynb
