[tool.poetry]
name = "Test-task"
version = "0.1.0"
description = "Baseline solution for a generic binary image classification task"
authors = ["DCCCXIX <dethcorddemid@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
torchelie = {git = "https://github.com/vermeille/Torchelie"}
ranger = {git = "https://github.com/lessw2020/Ranger-Deep-Learning-Optimizer"}
requests = "^2.25.1"
pandas = "^1.2.2"
numpy = "^1.20.1"
tqdm = "^4.57.0"
Pillow = "^8.1.0"
sklearn = "^0.0"
albumentations = "^0.5.2"
seaborn = "^0.11.1"
timm = "^0.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
